// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BannerWithAsset should well render with a carousel 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="relative"
        id="banner"
      >
        <div
          data-testid="carousel"
          id="banner_carousel"
        >
          <div
            class="slick-slider h-bannerSectionMobile desktop:h-bannerSectionDesktop w-full slick-initialized"
            dir="ltr"
          >
            <button
              class="sc-gswNZR sc-hLBbgP sc-pyfCe sc-kDvujY dQACwy iXwfzt eJVvAi jhFMyn slick-arrow slick-prev"
              type="button"
            />
            <div
              class="slick-list"
            >
              <div
                class="slick-track"
                style="opacity: 1; transform: translate3d(0px, 0px, 0px);"
              >
                <div
                  aria-hidden="true"
                  class="slick-slide slick-cloned"
                  data-index="-1"
                  style="width: 0px;"
                  tabindex="-1"
                >
                  <div>
                    <img
                      alt=""
                      class="object-cover object-top overflow-hidden h-bannerSectionMobile desktop:h-bannerSectionDesktop w-full"
                      loading="lazy"
                      src="test2.jpg"
                      style="width: 100%; display: inline-block;"
                      tabindex="-1"
                    />
                  </div>
                </div>
                <div
                  aria-hidden="false"
                  class="slick-slide slick-active slick-current"
                  data-index="0"
                  style="outline: none; width: 0px;"
                  tabindex="-1"
                >
                  <div>
                    <img
                      alt=""
                      class="object-cover object-top overflow-hidden h-bannerSectionMobile desktop:h-bannerSectionDesktop w-full"
                      loading="eager"
                      src="test1.jpg"
                      style="width: 100%; display: inline-block;"
                      tabindex="-1"
                    />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="slick-slide"
                  data-index="1"
                  style="outline: none; width: 0px;"
                  tabindex="-1"
                >
                  <div>
                    <img
                      alt=""
                      class="object-cover object-top overflow-hidden h-bannerSectionMobile desktop:h-bannerSectionDesktop w-full"
                      loading="lazy"
                      src="test2.jpg"
                      style="width: 100%; display: inline-block;"
                      tabindex="-1"
                    />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="slick-slide slick-cloned"
                  data-index="2"
                  style="width: 0px;"
                  tabindex="-1"
                >
                  <div>
                    <img
                      alt=""
                      class="object-cover object-top overflow-hidden h-bannerSectionMobile desktop:h-bannerSectionDesktop w-full"
                      loading="eager"
                      src="test1.jpg"
                      style="width: 100%; display: inline-block;"
                      tabindex="-1"
                    />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="slick-slide slick-cloned"
                  data-index="3"
                  style="width: 0px;"
                  tabindex="-1"
                >
                  <div>
                    <img
                      alt=""
                      class="object-cover object-top overflow-hidden h-bannerSectionMobile desktop:h-bannerSectionDesktop w-full"
                      loading="lazy"
                      src="test2.jpg"
                      style="width: 100%; display: inline-block;"
                      tabindex="-1"
                    />
                  </div>
                </div>
              </div>
            </div>
            <button
              class="sc-gswNZR sc-hLBbgP sc-pyfCe sc-jrcTuL dQACwy iXwfzt eJVvAi kakIFt slick-arrow slick-next"
              type="button"
            />
          </div>
        </div>
        <div
          class="absolute bottom-0 w-full h-20 desktop:h-100 bg-gradient-to-t from-gradientOnImages to-transparent"
        />
        <h1
          class="sc-ipEyDJ hkHyKq text-white font-bold text-Mobile-H1 desktop:text-H1 text-center desktop:leading-tight absolute bottom-20 desktop:bottom-40 px-10 desktop:px-10vw w-full"
          data-testid="text"
        >
          L’écoguide numérique et local qui présente mes découvertes du territoire !
        </h1>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="relative"
      id="banner"
    >
      <div
        data-testid="carousel"
        id="banner_carousel"
      >
        <div
          class="slick-slider h-bannerSectionMobile desktop:h-bannerSectionDesktop w-full slick-initialized"
          dir="ltr"
        >
          <button
            class="sc-gswNZR sc-hLBbgP sc-pyfCe sc-kDvujY dQACwy iXwfzt eJVvAi jhFMyn slick-arrow slick-prev"
            type="button"
          />
          <div
            class="slick-list"
          >
            <div
              class="slick-track"
              style="opacity: 1; transform: translate3d(0px, 0px, 0px);"
            >
              <div
                aria-hidden="true"
                class="slick-slide slick-cloned"
                data-index="-1"
                style="width: 0px;"
                tabindex="-1"
              >
                <div>
                  <img
                    alt=""
                    class="object-cover object-top overflow-hidden h-bannerSectionMobile desktop:h-bannerSectionDesktop w-full"
                    loading="lazy"
                    src="test2.jpg"
                    style="width: 100%; display: inline-block;"
                    tabindex="-1"
                  />
                </div>
              </div>
              <div
                aria-hidden="false"
                class="slick-slide slick-active slick-current"
                data-index="0"
                style="outline: none; width: 0px;"
                tabindex="-1"
              >
                <div>
                  <img
                    alt=""
                    class="object-cover object-top overflow-hidden h-bannerSectionMobile desktop:h-bannerSectionDesktop w-full"
                    loading="eager"
                    src="test1.jpg"
                    style="width: 100%; display: inline-block;"
                    tabindex="-1"
                  />
                </div>
              </div>
              <div
                aria-hidden="true"
                class="slick-slide"
                data-index="1"
                style="outline: none; width: 0px;"
                tabindex="-1"
              >
                <div>
                  <img
                    alt=""
                    class="object-cover object-top overflow-hidden h-bannerSectionMobile desktop:h-bannerSectionDesktop w-full"
                    loading="lazy"
                    src="test2.jpg"
                    style="width: 100%; display: inline-block;"
                    tabindex="-1"
                  />
                </div>
              </div>
              <div
                aria-hidden="true"
                class="slick-slide slick-cloned"
                data-index="2"
                style="width: 0px;"
                tabindex="-1"
              >
                <div>
                  <img
                    alt=""
                    class="object-cover object-top overflow-hidden h-bannerSectionMobile desktop:h-bannerSectionDesktop w-full"
                    loading="eager"
                    src="test1.jpg"
                    style="width: 100%; display: inline-block;"
                    tabindex="-1"
                  />
                </div>
              </div>
              <div
                aria-hidden="true"
                class="slick-slide slick-cloned"
                data-index="3"
                style="width: 0px;"
                tabindex="-1"
              >
                <div>
                  <img
                    alt=""
                    class="object-cover object-top overflow-hidden h-bannerSectionMobile desktop:h-bannerSectionDesktop w-full"
                    loading="lazy"
                    src="test2.jpg"
                    style="width: 100%; display: inline-block;"
                    tabindex="-1"
                  />
                </div>
              </div>
            </div>
          </div>
          <button
            class="sc-gswNZR sc-hLBbgP sc-pyfCe sc-jrcTuL dQACwy iXwfzt eJVvAi kakIFt slick-arrow slick-next"
            type="button"
          />
        </div>
      </div>
      <div
        class="absolute bottom-0 w-full h-20 desktop:h-100 bg-gradient-to-t from-gradientOnImages to-transparent"
      />
      <h1
        class="sc-ipEyDJ hkHyKq text-white font-bold text-Mobile-H1 desktop:text-H1 text-center desktop:leading-tight absolute bottom-20 desktop:bottom-40 px-10 desktop:px-10vw w-full"
        data-testid="text"
      >
        L’écoguide numérique et local qui présente mes découvertes du territoire !
      </h1>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`BannerWithAsset should well render with a single picture 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="relative"
        id="banner"
      >
        <img
          alt=""
          class="object-cover object-top overflow-hidden h-bannerSectionMobile desktop:h-bannerSectionDesktop w-full"
          data-testid="image"
          id="banner-image"
          src="test0.jpg"
        />
        <div
          class="absolute bottom-0 w-full h-20 desktop:h-100 bg-gradient-to-t from-gradientOnImages to-transparent"
        />
        <h1
          class="sc-ipEyDJ hkHyKq text-white font-bold text-Mobile-H1 desktop:text-H1 text-center desktop:leading-tight absolute bottom-20 desktop:bottom-40 px-10 desktop:px-10vw w-full"
          data-testid="text"
        >
          L’écoguide numérique et local qui présente mes découvertes du territoire !
        </h1>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="relative"
      id="banner"
    >
      <img
        alt=""
        class="object-cover object-top overflow-hidden h-bannerSectionMobile desktop:h-bannerSectionDesktop w-full"
        data-testid="image"
        id="banner-image"
        src="test0.jpg"
      />
      <div
        class="absolute bottom-0 w-full h-20 desktop:h-100 bg-gradient-to-t from-gradientOnImages to-transparent"
      />
      <h1
        class="sc-ipEyDJ hkHyKq text-white font-bold text-Mobile-H1 desktop:text-H1 text-center desktop:leading-tight absolute bottom-20 desktop:bottom-40 px-10 desktop:px-10vw w-full"
        data-testid="text"
      >
        L’écoguide numérique et local qui présente mes découvertes du territoire !
      </h1>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`BannerWithAsset should well render with a video 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="relative"
        id="banner"
      >
        <video
          autoplay=""
          class="object-cover object-center overflow-hidden h-bannerSectionMobile desktop:h-bannerSectionDesktop w-full"
          data-testid="video"
          id="banner-video"
          loop=""
          playsinline=""
          src="test.mp4"
        />
        <div
          class="absolute bottom-0 w-full h-20 desktop:h-100 bg-gradient-to-t from-gradientOnImages to-transparent"
        />
        <h1
          class="sc-ipEyDJ hkHyKq text-white font-bold text-Mobile-H1 desktop:text-H1 text-center desktop:leading-tight absolute bottom-20 desktop:bottom-40 px-10 desktop:px-10vw w-full"
          data-testid="text"
        >
          L’écoguide numérique et local qui présente mes découvertes du territoire !
        </h1>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="relative"
      id="banner"
    >
      <video
        autoplay=""
        class="object-cover object-center overflow-hidden h-bannerSectionMobile desktop:h-bannerSectionDesktop w-full"
        data-testid="video"
        id="banner-video"
        loop=""
        playsinline=""
        src="test.mp4"
      />
      <div
        class="absolute bottom-0 w-full h-20 desktop:h-100 bg-gradient-to-t from-gradientOnImages to-transparent"
      />
      <h1
        class="sc-ipEyDJ hkHyKq text-white font-bold text-Mobile-H1 desktop:text-H1 text-center desktop:leading-tight absolute bottom-20 desktop:bottom-40 px-10 desktop:px-10vw w-full"
        data-testid="text"
      >
        L’écoguide numérique et local qui présente mes découvertes du territoire !
      </h1>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
